<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfigureTicketFragment"
    android:padding="8dp"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/start_edittext_background"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:drawableStart="@drawable/location"
        android:drawableTint="?attr/colorSurface"
        android:drawablePadding="8dp"
        android:textColorHint="?attr/colorSurface"
        android:hint="@string/from_et"
        android:inputType="text"
        android:layout_marginBottom="1dp"/>

    <EditText
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorSecondaryVariant"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:drawableStart="@drawable/location"
        android:drawableTint="?attr/colorSurface"
        android:drawablePadding="8dp"
        android:textColorHint="?attr/colorSurface"
        android:hint="@string/to_et"
        android:inputType="text"
        android:layout_marginBottom="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp">

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="?attr/colorSecondaryVariant"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:drawableTint="?attr/colorSurface"
            android:drawablePadding="8dp"
            android:textColorHint="?attr/colorSurface"
            android:inputType="datetime"
            android:hint="@string/whet_et" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"/>

        <EditText
            android:id="@+id/returnDate"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="?attr/colorSecondaryVariant"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:drawableTint="?attr/colorSurface"
            android:drawablePadding="8dp"
            android:textColorHint="?attr/colorSurface"
            android:inputType="datetime"
            android:hint="@string/when_return_et" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/end_edittext_background"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play_pass"
            android:layout_gravity="center_vertical"
            app:tint="?attr/colorSurface" />

        <Spinner
            android:id="@+id/ticketClass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:listitem="@layout/spinner_item">

        </Spinner>
    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_def"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/buy_text"
        android:layout_gravity="center" />

</LinearLayout>